@@ -2,10 +2,10 @@
 #define _HAD_ZIP_H
 
 /*
-  $NiH: zip.h,v 1.50 2005/07/14 14:08:11 dillo Exp $
+  $NiH: zip.h,v 1.51 2005/09/06 23:44:25 wiz Exp $
 
   zip.h -- exported declarations.
-  Copyright (C) 1999, 2003, 2004, 2005 Dieter Baron and Thomas Klausner
+  Copyright (C) 1999, 2003, 2004, 2005, 2006 Dieter Baron and Thomas Klausner
 
   This file is part of libzip, a library to manipulate ZIP archives.
   The authors can be contacted at <nih@giga.or.at>
@@ -133,6 +133,7 @@ struct zip_stat {
     off_t size;				/* size of file (uncompressed) */
     off_t comp_size;			/* size of file (compressed) */
     unsigned short comp_method;		/* compression method used */
+    unsigned short encryption_method;	/* encryption method used */
 };
 
 struct zip;
