@@ -1,3 +1,9 @@
+0.x [2006/xx/xx]
+
+* struct zip_stat increased for future encryption support
+* zip_add return value changed (now returns new index of added file)
+* shared library major bump because of previous two
+
 0.6.1 [2005/07/14]
 
 * various bug fixes
